# aisis

./: .env.example  .gitignore  AI_Accelerators_Transforming_Scalability_Model_Efficiency.md  AI_SWARM_README.md  AUDIT_SUMMARY_REPORT.md  CHANGELOG.md  CMAKE_ANALYSIS.md  CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  COMPLETE_SYSTEM_MANIFEST.md  COMPREHENSIVE_FOLDER_CHECK.md  COMPREHENSIVE_RESTORATION_PIPELINE.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  Dockerfile  FEATURES_SUMMARY.md  FIXES_SUMMARY.md  GODMODE_ACHIEVEMENT_SUMMARY.md  GPT4All.lnk  HARDCORE_PERFORMANCE_GUIDE.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  LAUNCH_CHECKLIST.md  LICENSE  Makefile  OPERATION_REPORT.md  PIPELINE_SUMMARY.md  PROJECT_COMPLETION_REPORT.md  QUICK_START.md  README-ULTIMATE.md  README.md  README_COMPLETE_SYSTEM.md  README_ENHANCED.md  README_FINAL.md  README_GODMODE.md  README_HARDCORE_SYSTEM.md  README_TRANSCENDENT.md  README_ULTIMATE.md  RENAME_SUMMARY.md  (+66 more)
.cursor/rules/: speed.mdc
.github/workflows/: ci.yml
AI artworkS/: Makefile  OPTIMIZATION_SUMMARY.md  PROJECT_INFO.md  README.md  SAVE_CONFIRMATION.md  example_usage.c  memory_pool.c  memory_pool.h  pipeline.c  pipeline.h  pipeline_demo
AI-ARTWORKS/: .pylintrc  Al-artworks.env  CHANGELOG.md  CONTRIBUTING.md  INSTALLER_README.md  LICENSE  PYLINT_SETUP.md  README.md  README_ENHANCED.md  SPECIALIZED_AGENTS.md  install.py  launch.py  main.py  pyproject.toml  setup.py  setup_pylint.py  test_installer.py
AI-ARTWORKS/docs/: HowToWriteAPlugin.md  JAVA_INTEGRATION.md  ONBOARDING.md  PLUGIN_INFRA.md  ROADMAP.md  USER_MANUAL.md  conf.py
AI-ARTWORKS/features/: README.md  federated_self_improvement.py
AI-ARTWORKS/plugins/: README.md  marketplace.py  plugin_base.py  plugin_manager.py  sample_plugin.py
AI-ARTWORKS/scripts/: README.md  build_installer.bat  download_models.py  enhanced_installer.py  github_setup.bat  github_setup.sh  installation_test.py  run_installation_test.bat  run_installation_test.sh  setup_environment.py
AI-ARTWORKS/src/: __init__.py  app_launcher.py
AI-ARTWORKS/src/agents/: README.md  __init__.py  base_agent.py  color_correction.py  hyper_orchestrator.py  material_recognition.py  meta_correction.py  multi_agent_orchestrator.py  workflow_builder.py
AI-ARTWORKS/src/collab/: automerge_collab.py  lan_relay_server.py
AI-ARTWORKS/src/core/: README.md  __init__.py  config.py  config_validation.py  gpu_utils.py  integration.py  logging_setup.py  model_registry.py  model_zoo.py  voice_manager.py
AI-ARTWORKS/src/core/voice/: __init__.py  bark_tts.py
AI-ARTWORKS/src/plugins/: README.md  __init__.py
AI-ARTWORKS/src/ui/: README.md  __init__.py  agent_explain_dialog.py  collab_client.py  crash_reporting_dialog.py  main_window.py  model_zoo_dialog.py  modern_interface.py  onboarding_dialog.py  plugin_manager_dialog.py  tour_dialog.py
AI-ARTWORKS/src/voice/: README.md
AI-ARTWORKS/tests/: README.md  __init__.py  test_agents.py  test_performance.py  test_ui.py
advanced_pipelines/: README.md  async_pipeline.py  cache_aware_pipeline.py  comprehensive_benchmark.py  final_demo.py  memory_optimized_pipeline.py  realistic_demo.py  simple_demo.py
advanced_rag_system/: __init__.py
advanced_rag_system/agents/: base_agent.py  document_agent.py  orchestrator_agent.py  query_agent.py
advanced_rag_system/core/: rag_engine.py
advanced_rag_system/embeddings/: embedding_manager.py
advanced_rag_system/llm/: llm_factory.py
advanced_rag_system/processors/: document_processor.py
advanced_rag_system/retrievers/: hybrid_retriever.py
alartworks/: __init__.py  api.py  cli.py
app/: __init__.py  config.py  database.py  document_processor.py  rag_engine.py  services.py  vector_store.py
athena/: __init__.py
config/: ultimate_config.yaml  voice_presets.json
docs/: AGENT_BENCHMARKS.md  AI_ACCELERATION_GUIDE.md  API.md  API_REFERENCE.md  CONTRIBUTING_PLUGINS.md  DEPLOYMENT.md  HowToWriteAPlugin.md  JAVA_INTEGRATION.md  ONBOARDING.md  PERFORMANCE_TUNING.md  PLUGIN_CONTRIBUTING.md  PLUGIN_INFRA.md  ROADMAP.md  TROUBLESHOOTING.md  USER_MANUAL.md  WARLORD_PERFORMANCE_GUIDE.md  conf.py  knowledge_base.md
examples/: CMakeLists.txt  Makefile  ai_acceleration_demo.cpp  basic_usage.py  cmake_install.cmake  main.cpp  simple_agent.py
features/: README.md  cross_app_automation.py  federated_self_improvement.py  predictive_editing.py
forensic_agents/: __init__.py  behavioral_analysis_agent.py  malware_analysis_agent.py  memory_forensic_agent.py  network_forensic_agent.py
forensic_system/: example_usage.py  requirements.txt
include/: aisis.h  embedding.h  index.h  similarity.h  storage.h  types.h  vector_db.h
js/: main.js  test.js
k8s/: deployment.yaml  service.yaml
plugins/: README.md  batch_processor.py  example_filter.py  image_caption_exporter.py  marketplace.py  plugin_base.py  plugin_manager.py  sample_plugin.py
scripts/: README.md  add_state_machine.py  add_vector_registers.py  advanced_warlord_tuning.ps1  benchmark.py  build.sh  build_installer.bat  create_vector_agents.py  dev_onboarding.py  download_models.py  generate_vector_agents.py  github_setup.bat  github_setup.sh  install.sh  linux_optimization.sh  setup.sh  setup_environment.py  windows_optimization.bat  windows_warlord_setup.bat
src/: UltimateApplication.cpp  UltimateGodModeApplication.cpp  __init__.py  ai_swarm_deploy.py  app_launcher.py  collab_server.py  embedding.cpp  hardcore_performance.cpp  index.cpp  main.c  main.cpp  main.py  performance_monitor.cpp  similarity.cpp  storage.cpp  vector_db.cpp  warlord_performance.cpp
tests/: README.md  __init__.py  test_agents.py  test_aisis.c  test_comprehensive.py  test_context_panel.py  test_core.py  test_core_config.py  test_integration.py  test_intelligence.py  test_main.cpp  test_memory.py  test_memory_leak.py  test_model_loading.py  test_performance.py  test_performance_stress.py  test_plugins.py  test_stress.py  test_super_resolution_agent.py  test_ui.py  test_ui_automation.py  test_ultimate_system.c  test_ultimate_system.cpp  test_voice.py  test_voice_integration.py  test_workflows.py
(+308 files in other folders)
