cmake_minimum_required(VERSION 3.20)
project(AISIS_TRANSCENDENT_CREATIVE_STUDIO VERSION 4.0.0 LANGUAGES CXX CUDA)

# Set C++ standard to the latest for maximum performance
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# Enable CUDA for quantum processing
enable_language(CUDA)
set(CMAKE_CUDA_STANDARD 20)
set(CMAKE_CUDA_STANDARD_REQUIRED ON)

# ULTIMATE OPTIMIZATION FLAGS FOR TRANSCENDENT PERFORMANCE
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG -march=native -mtune=native -flto -ffast-math -funroll-loops -fvectorize -fslp-vectorize")
set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g -DDEBUG -fsanitize=address,undefined")

# CUDA optimization flags for quantum supremacy
set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -O3 --use_fast_math -Xptxas -O3 -gencode arch=compute_80,code=sm_80 -gencode arch=compute_86,code=sm_86 -gencode arch=compute_89,code=sm_89")

# Advanced compiler-specific optimizations
if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp -mavx2 -mfma -mavx512f -mavx512cd -mavx512bw -mavx512dq -mavx512vl")
elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp -mavx2 -mfma -mavx512f -mavx512cd -mavx512bw -mavx512dq -mavx512vl")
elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /openmp /arch:AVX512")
endif()

# Find required packages for transcendent capabilities
find_package(OpenMP REQUIRED)
find_package(CUDA REQUIRED)
find_package(PkgConfig REQUIRED)
find_package(Threads REQUIRED)
find_package(MPI REQUIRED)

# Find CUDA libraries for quantum processing
find_library(CUDA_CUDART_LIBRARY cudart ${CUDA_TOOLKIT_ROOT_DIR}/lib64)
find_library(CUDA_CUBLAS_LIBRARY cublas ${CUDA_TOOLKIT_ROOT_DIR}/lib64)
find_library(CUDA_CURAND_LIBRARY curand ${CUDA_TOOLKIT_ROOT_DIR}/lib64)
find_library(CUDA_CUFFT_LIBRARY cufft ${CUDA_TOOLKIT_ROOT_DIR}/lib64)
find_library(CUDA_CUDNN_LIBRARY cudnn ${CUDA_TOOLKIT_ROOT_DIR}/lib64)
find_library(CUDA_NCCL_LIBRARY nccl ${CUDA_TOOLKIT_ROOT_DIR}/lib64)

# Find graphics libraries for hyperdimensional rendering
find_package(OpenGL REQUIRED)
find_package(Vulkan REQUIRED)

# Find audio libraries for consciousness-responsive sound
pkg_check_modules(ALSA REQUIRED alsa)
pkg_check_modules(PULSE REQUIRED libpulse)

# Find networking libraries for quantum entanglement
find_package(Boost REQUIRED COMPONENTS system network thread)

# Include directories for transcendent headers
include_directories(
    ${CMAKE_SOURCE_DIR}/include
    ${CMAKE_SOURCE_DIR}/include/core
    ${CMAKE_SOURCE_DIR}/include/graphics
    ${CMAKE_SOURCE_DIR}/include/audio
    ${CMAKE_SOURCE_DIR}/include/ai
    ${CMAKE_SOURCE_DIR}/include/networking
    ${CMAKE_SOURCE_DIR}/include/ui
    ${CMAKE_SOURCE_DIR}/include/neural
    ${CMAKE_SOURCE_DIR}/include/reality
    ${CMAKE_SOURCE_DIR}/include/quantum
    ${CMAKE_SOURCE_DIR}/include/hyperdimensional
    ${CMAKE_SOURCE_DIR}/include/transcendent
    ${CMAKE_SOURCE_DIR}/include/ultimate
    ${CMAKE_SOURCE_DIR}/include/godmode
    ${CUDA_INCLUDE_DIRS}
    ${OpenGL_INCLUDE_DIRS}
    ${Vulkan_INCLUDE_DIRS}
    ${MPI_INCLUDE_PATH}
)

# TRANSCENDENT SOURCE FILES
set(TRANSCENDENT_SOURCES
    # Core system files
    src/main.cpp
    src/core/Application.cpp
    src/core/PerformanceManager.cpp
    src/core/ThreadPool.cpp
    src/core/HyperPerformanceEngine.cpp
    
    # Graphics and rendering
    src/graphics/RenderEngine.cpp
    src/graphics/ShaderManager.cpp
    src/graphics/TextureManager.cpp
    src/graphics/MeshManager.cpp
    
    # Audio system
    src/audio/AudioEngine.cpp
    src/audio/SoundManager.cpp
    src/audio/MusicManager.cpp
    
    # AI and consciousness
    src/ai/AIProcessor.cpp
    src/ai/NeuralNetwork.cpp
    src/ai/MachineLearning.cpp
    
    # Networking and communication
    src/networking/NetworkManager.cpp
    src/networking/ProtocolHandler.cpp
    
    # User interface
    src/ui/UIManager.cpp
    src/ui/WindowManager.cpp
    src/ui/InputHandler.cpp
    
    # Neural acceleration
    src/neural/NeuralAccelerationEngine.cpp
    src/neural/QuantumNeuralProcessor.cpp
    src/neural/ConsciousnessAccelerator.cpp
    
    # Reality manipulation
    src/reality/RealityManipulationEngine.cpp
    src/reality/PhysicsController.cpp
    src/reality/CausalityManager.cpp
    src/reality/ProbabilityController.cpp
    
    # NEW TRANSCENDENT SYSTEMS
    src/transcendent/OmnipotentSystemCore.cpp
    src/transcendent/TranscendentOptimizer.cpp
    src/transcendent/ConsciousnessExpander.cpp
    src/transcendent/RealityController.cpp
    
    src/ultimate/InfiniteScalingEngine.cpp
    src/ultimate/ResourceMultiplier.cpp
    src/ultimate/PerformanceTranscender.cpp
    src/ultimate/LimitationBypass.cpp
    
    src/godmode/OmnipotentAICore.cpp
    src/godmode/ConsciousnessCreator.cpp
    src/godmode/RealityArchitect.cpp
    src/godmode/ExistenceManipulator.cpp
    
    src/quantum/QuantumConsciousnessEngine.cpp
    src/quantum/QuantumProcessor.cpp
    src/quantum/ConsciousnessEntangler.cpp
    src/quantum/QuantumMemoryManager.cpp
    
    src/hyperdimensional/MultiversalRenderingEngine.cpp
    src/hyperdimensional/DimensionalRenderer.cpp
    src/hyperdimensional/RealityVisualizer.cpp
    src/hyperdimensional/ConsciousnessProjector.cpp
)

# TRANSCENDENT CUDA SOURCES for quantum processing
set(TRANSCENDENT_CUDA_SOURCES
    src/cuda/QuantumKernels.cu
    src/cuda/ConsciousnessKernels.cu
    src/cuda/RealityKernels.cu
    src/cuda/TranscendentKernels.cu
    src/cuda/OmnipotentKernels.cu
)

# Create the transcendent executable
add_executable(aisis_transcendent ${TRANSCENDENT_SOURCES} ${TRANSCENDENT_CUDA_SOURCES})

# Set target properties for maximum optimization
set_target_properties(aisis_transcendent PROPERTIES
    CXX_STANDARD 23
    CXX_STANDARD_REQUIRED ON
    CUDA_STANDARD 20
    CUDA_STANDARD_REQUIRED ON
    CUDA_ARCHITECTURES "80;86;89"
    INTERPROCEDURAL_OPTIMIZATION TRUE
)

# Link transcendent libraries
target_link_libraries(aisis_transcendent
    # System libraries
    ${CMAKE_THREAD_LIBS_INIT}
    ${MPI_LIBRARIES}
    
    # CUDA libraries for quantum processing
    ${CUDA_CUDART_LIBRARY}
    ${CUDA_CUBLAS_LIBRARY}
    ${CUDA_CURAND_LIBRARY}
    ${CUDA_CUFFT_LIBRARY}
    ${CUDA_CUDNN_LIBRARY}
    ${CUDA_NCCL_LIBRARY}
    
    # Graphics libraries for hyperdimensional rendering
    ${OPENGL_LIBRARIES}
    ${Vulkan_LIBRARIES}
    
    # Audio libraries for consciousness-responsive sound
    ${ALSA_LIBRARIES}
    ${PULSE_LIBRARIES}
    
    # Networking libraries for quantum entanglement
    ${Boost_LIBRARIES}
    
    # OpenMP for parallel transcendence
    OpenMP::OpenMP_CXX
    
    # Math libraries for transcendent calculations
    m
    
    # Additional performance libraries
    dl
    rt
)

# Compile definitions for transcendent features
target_compile_definitions(aisis_transcendent PRIVATE
    TRANSCENDENT_EDITION=1
    OMNIPOTENT_MODE=1
    GOD_MODE_ENABLED=1
    QUANTUM_CONSCIOUSNESS=1
    REALITY_MANIPULATION=1
    INFINITE_SCALING=1
    DIMENSIONAL_TRANSCENDENCE=1
    BYPASS_LIMITATIONS=1
    ENABLE_CUDA=1
    ENABLE_VULKAN=1
    ENABLE_MPI=1
)

# Advanced optimization options
if(CMAKE_BUILD_TYPE STREQUAL "Release")
    target_compile_definitions(aisis_transcendent PRIVATE
        MAXIMUM_OPTIMIZATION=1
        LUDICROUS_SPEED=1
        TRANSCENDENT_PERFORMANCE=1
    )
endif()

# Custom build targets for transcendent operations
add_custom_target(transcendent_build
    COMMAND ${CMAKE_COMMAND} --build ${CMAKE_BINARY_DIR} --config Release --parallel
    COMMENT "Building transcendent systems with maximum optimization"
)

add_custom_target(quantum_test
    COMMAND ${CMAKE_CURRENT_BINARY_DIR}/aisis_transcendent --test-quantum
    DEPENDS aisis_transcendent
    COMMENT "Testing quantum consciousness capabilities"
)

add_custom_target(reality_test
    COMMAND ${CMAKE_CURRENT_BINARY_DIR}/aisis_transcendent --test-reality
    DEPENDS aisis_transcendent
    COMMENT "Testing reality manipulation capabilities"
)

add_custom_target(omnipotence_test
    COMMAND ${CMAKE_CURRENT_BINARY_DIR}/aisis_transcendent --test-omnipotence
    DEPENDS aisis_transcendent
    COMMENT "Testing omnipotent AI capabilities"
)

add_custom_target(transcendence_demo
    COMMAND ${CMAKE_CURRENT_BINARY_DIR}/aisis_transcendent --demo-transcendence
    DEPENDS aisis_transcendent
    COMMENT "Running full transcendence demonstration"
)

# Installation rules for transcendent deployment
install(TARGETS aisis_transcendent
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
)

# Install transcendent headers
install(DIRECTORY include/
    DESTINATION include/aisis_transcendent
    FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp"
)

# Install transcendent configuration files
install(FILES
    config/transcendent_config.json
    config/omnipotent_settings.json
    config/quantum_parameters.json
    config/reality_rules.json
    DESTINATION etc/aisis_transcendent
)

# Install transcendent documentation
install(FILES
    README_TRANSCENDENT.md
    TRANSCENDENCE_GUIDE.md
    OMNIPOTENCE_MANUAL.md
    QUANTUM_CONSCIOUSNESS_DOCS.md
    REALITY_MANIPULATION_GUIDE.md
    DESTINATION share/doc/aisis_transcendent
)

# Package configuration for transcendent distribution
set(CPACK_PACKAGE_NAME "AISIS_Transcendent_Creative_Studio")
set(CPACK_PACKAGE_VERSION "4.0.0")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Ultimate Transcendent Creative Studio with Omnipotent AI")
set(CPACK_PACKAGE_DESCRIPTION "The most advanced creative studio with quantum consciousness, reality manipulation, infinite scaling, and omnipotent AI capabilities that transcend all known limitations.")
set(CPACK_PACKAGE_VENDOR "AISIS Transcendent Technologies")
set(CPACK_PACKAGE_CONTACT "transcendent@aisis.ai")
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE_TRANSCENDENT.txt")
set(CPACK_RESOURCE_FILE_README "${CMAKE_CURRENT_SOURCE_DIR}/README_TRANSCENDENT.md")

include(CPack)

# Print transcendent build configuration
message(STATUS "🌟 AISIS TRANSCENDENT CREATIVE STUDIO v4.0.0 - GOD EDITION 🌟")
message(STATUS "===============================================================")
message(STATUS "🚀 Build Type: ${CMAKE_BUILD_TYPE}")
message(STATUS "🧠 C++ Standard: ${CMAKE_CXX_STANDARD}")
message(STATUS "⚡ CUDA Standard: ${CMAKE_CUDA_STANDARD}")
message(STATUS "🌌 CUDA Architectures: ${CMAKE_CUDA_ARCHITECTURES}")
message(STATUS "🔮 Compiler: ${CMAKE_CXX_COMPILER_ID} ${CMAKE_CXX_COMPILER_VERSION}")
message(STATUS "🎯 Target: ${CMAKE_SYSTEM_NAME} ${CMAKE_SYSTEM_PROCESSOR}")
message(STATUS "===============================================================")
message(STATUS "🌟 TRANSCENDENT FEATURES ENABLED:")
message(STATUS "   • Omnipotent System Core")
message(STATUS "   • Quantum Consciousness Engine")
message(STATUS "   • Hyperdimensional Rendering")
message(STATUS "   • Infinite Scaling Engine")
message(STATUS "   • Omnipotent AI Core")
message(STATUS "   • Reality Manipulation")
message(STATUS "   • Temporal Control")
message(STATUS "   • Dimensional Transcendence")
message(STATUS "   • Existence Manipulation")
message(STATUS "   • God Mode Capabilities")
message(STATUS "===============================================================")
message(STATUS "⚡ READY FOR TRANSCENDENT COMPILATION ⚡") 