[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-artwork"
version = "0.1.0"
description = "AI-ARTWORK - GPU-accelerated AI Creative Studio"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "AI-ARTWORK Team" }
]
dependencies = [
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "transformers>=4.36.0",
    "openai-whisper>=20231117",
    "bark-gpu>=0.1.0",
    "PySide6>=6.6.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "opencv-python-headless>=4.8.0",
    "onnxruntime-gpu>=1.16.0",
    "tensorrt>=8.6.1",
    "langchain>=0.1.0",
    "autogen>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.12.0",
    "mypy>=1.7.0",
    "isort>=5.13.0",
    "flake8>=6.1.0",
    "pylint>=3.3.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "R0915",  # too-many-statements
    "W0621",  # redefined-outer-name
    "W0622",  # redefined-builtin
    "W0703",  # broad-except
    "W0612",  # unused-variable
    "W0611",  # unused-import
]

[tool.pylint.format]
max-line-length = 100
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "db"]

[tool.pylint.design]
max-args = 10
max-locals = 20
max-returns = 10
max-branches = 15
max-statements = 60
max-parents = 7
max-attributes = 10
min-public-methods = 0

[tool.pylint.exceptions]
overgeneral-exceptions = ["builtins.Exception"]
